# uni-web

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
src/backend/: pyproject.toml
src/backend/app/: main.py
src/frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src/frontend/src/: App.vue  main.ts
